--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,7 @@ common-css:
   - "/css/bootstrap-social.css"
   - "/css/main.css"
 common-ext-css:
+  - "/css/academicons.min.css"
   - "//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
 common-googlefonts:
   - "Lora:400,700,400italic,700italic"
